# VSLAM-Quadcopter_2021TI

./: README.md
ANO-MIXOF/APP/: MoveControl.c  MoveControl.h  WaypointControl.c
ANO-MIXOF/DriversBsp/: Drv_AnoOf.h
ANO-MIXOF/FcSrc/: ANO_DT_LX.c  ANO_LX.c  Ano_Scheduler.c  LX_FC_EXT_Sensor.c  LX_FC_State.c
ANO-MIXOF/ProjectTM4C123/: ANO_LX_TM4C123.uvguix.Jason  ANO_LX_TM4C123.uvoptx  ANO_LX_TM4C123.uvprojx  JLinkLog.txt
ANO/APP/: MoveControl.c  MoveControl.h
ANO/Doc/tools/: check.py
ANO/Doc/凌霄/6.凌霄IMU固件/: 硬件版本120-软件版本123.ano
ANO/FcSrc/: ANO_DT_LX.c  Ano_Scheduler.c  LX_FC_State.h  User_Task.c
ANO/ProjectTM4C123/: ANO_LX_TM4C123.uvguix.Jason  ANO_LX_TM4C123.uvprojx  JLinkLog.txt
Digital_positioning/K210/: position_traceline.py
Digital_positioning/OpenMV/: traceline.py
Digital_positioning/Quadcopter/ANO_LX_FC/APP/: MoveControl.c
Digital_positioning/Quadcopter/ANO_LX_FC/DriversBsp/: Drv_BSP.c
Digital_positioning/Quadcopter/ANO_LX_FC/ProjectTM4C123/: ANO_LX_TM4C123.uvguix.Jason  ANO_LX_TM4C123.uvguix.digiwang  JLinkLog.txt
Digital_positioning/k210/detection/: main.py
Doc/凌霄/2.驱动安装/: KEIL下载.txt
Doc/凌霄/5.原理图及PCB/: 飞控-REV.PcbDoc.htm
Doc/已知bug及解决方法/: TFboot.md
Doc/自定义控制协议/: ~$自主控制协议.xlsx  自主控制协议.xlsx
JetsonDetection/dep_detection/workplace/: depth_with_color.py  detectnet_mnist.py  startup.sh
K210Detection/model/309/: labels.txt  m.kmodel
K210Detection/model/7.19/: main.py
K210Detection/model/maixhub_detector_result_2021_07_17__07_23/: m.kmodel
K210Detection/model/maixhub_detector_result_2021_07_17__11_55/: labels.txt  m.kmodel
K210Detection/model/maixhub_detector_result_2021_07_19__03_44/: m.kmodel
K210Detection/model/maixhub_detector_result_bf0a67a9b27657068b98d7264e258ec2_2021_07_16__16_49/: boot.py
K210Detection/python_script/: color_inversion.py  main_txt.py  makeVOC.py  rename.py  unpack_mnist.py
K210Detection/tools/: train.md
Line_inspection/K210/: traceline.py
Line_inspection/Quadcopter/ANO_LX_FC/APP/: MoveControl.c  (+1 more)
Maze/: hsv.py  temp.py
Maze/ROS/cvtask/: package.xml
Maze/ROS/slampose/: package.xml
OpticalFlow/: flow.py
SLAM/JetsonStart/: startup.sh
SLAM/OpenNI/Doc/: api_en-index.html.lnk
SLAM/OpenNI/Windows/Samples/samples.old/: CMakeLists.txt
SLAM/OpenNI/Windows/Samples/samples.old/ColorReaderPoll/: CMakeLists.txt
SLAM/OpenNI/Windows/Samples/samples.old/GeneratePointCloud/: CMakeLists.txt
SLAM/OpenNI/Windows/Samples/samples.old/HardwareD2C/: AstraD2C.h  AstraProD2C.cpp
SLAM/OpenNI/Windows/Samples/samples.old/InfraredOniFileReader/: InfraredOniFileReader.cpp
SLAM/OpenNI/Windows/Samples/samples.old/InfraredOniFileRecorder/: CMakeLists.txt  InfraredOniFileRecorder.cpp
SLAM/OpenNI/Windows/Samples/samples.old/InfraredReaderEvent/: InfraredReaderEvent.cpp
SLAM/OpenNI/Windows/Samples/samples.old/InfraredReaderPoll/: CMakeLists.txt
SLAM/OpenNI/Windows/Samples/samples.old/MultiDepthViewer/: CMakeLists.txt
SLAM/OpenNI/Windows/Samples/samples.old/SoftD2C/: main.cpp
SLAM/ROS/cvtask/: CMakeLists.txt
SLAM/ROS/slampose/: CMakeLists.txt
SLAM/RaspberryStart/: startup.sh
SLAM/TestCode/: color.py
SLAM/camera_info/: rgb.yaml
SLAM/catkin_ws/devel/: .catkin
TM4CDataCenter/APP/: dataCenter.c  dataCenter.h
TM4CDataCenter/DriversBsp/: Drv_BSP.c
TM4CDataCenter/FcSrc/: ANO_LX.c  SysConfig.h  User_Task.h
TM4CDataCenter/ProjectTM4C123/: ANO_LX_TM4C123.uvguix.35547  ANO_LX_TM4C123.uvguix.Jason  ANO_LX_TM4C123.uvoptx  ANO_LX_TM4C123.uvprojx
aiModule/Digital_positioning/K210/: position_traceline.py  traceline.py
aiModule/K210Detection/background/: readme.md
aiModule/K210Detection/k210VOCdataset/: readme.md
aiModule/K210Detection/mnist/: readme.md
aiModule/K210Detection/python_script/: main_txt.py  makeVOC.py  resize.py
baseModule/ANO-MIXOF/APP/: MoveControl.c  MoveControl.h  WaypointControl.c  WaypointControl.h
baseModule/ANO-MIXOF/DriversBsp/: Ano_Math.h  Drv_AnoOf.c  Drv_BSP.c
baseModule/ANO-MIXOF/FcSrc/: ANO_DT_LX.c  Ano_Scheduler.c  LX_FC_EXT_Sensor.c  main.c
baseModule/ANO-MIXOF/ProjectTM4C123/: ANO_LX_TM4C123.uvguix.Jason  ANO_LX_TM4C123.uvoptx  ANO_LX_TM4C123.uvprojx  JLinkLog.txt
baseModule/ANO/APP/: MoveControl.c  MoveControl.h
baseModule/ANO/FcSrc/: LX_FC_EXT_Sensor.c
baseModule/ANO/ProjectTM4C123/: ANO_LX_TM4C123.uvguix.Jason  ANO_LX_TM4C123.uvoptx  ANO_LX_TM4C123.uvprojx  JLinkLog.txt
baseModule/SLAM/AstraPro/OpenNI/Windows/Samples/samples/: CMakeLists.txt  ColorReaderEvent.cpp  ColorReaderPoll.cpp  DepthReaderEvent.cpp  DepthReaderPoll.cpp  GeneratePointCloud.cpp  RGBSNReader.cpp
baseModule/SLAM/AstraPro/OpenNI/Windows/Samples/samples.old/MultipleStreamRead/: CMakeLists.txt
baseModule/SLAM/calibration/: calibration  calibration.cpp  hsv.py
cvModule/BinocularCamera/: openmv_calculation_RT.py
cvModule/Line_inspection/K210/: k210_find_control.py
cvModule/Line_inspection/OpenMV/: openmv-findline.py
cvModule/Line_inspection/Quadcopter/: PID参数.xlsx
cvModule/Maze/code/: hsv-判定是否有路线.py  talker.py
cvModule/OpenCV/KNN目标检测/: task.py
cvModule/OpenCV/一字型激光定位/: task.py
cvModule/OpenCV/二维码定位扫描/: task.py  taskpc.py
cvModule/OpenCV/十字型激光定位/: task.py
cvModule/OpenCV/字母识别、常见形状识别/: task.py
cvModule/OpenCV/帧差异运动目标检测/: task.py
cvModule/OpenCV/方框识别/: getHSV.py  task.py
cvModule/OpenCV/构建颜色直方图/: task.py
cvModule/OpenCV/混合高斯目标检测/: task.py
cvModule/OpenCV/激光斑点定位/: task.py
cvModule/OpenCV/稀疏光流角点追踪/: task.py
cvModule/OpenCV/轮廓匹配算法/: task.py
dataModule/: Communicate_With_F411.HMI  Communicate_With_TM4C.HMI
dataModule/Remote_Controller_F411/MDK-ARM/: template.uvguix.35547  template.uvoptx  template.uvprojx
dataModule/TM4CDataCenter/APP/: MoveControl.c  MoveControl.h  dataCenter.c  dataCenter.h  laserControl.c  laserControl.h
dataModule/TM4CDataCenter/DriversBsp/: Drv_BSP.c
dataModule/TM4CDataCenter/FcSrc/: Ano_Scheduler.c  SysConfig.h  main.c
dataModule/TM4CDataCenter/ProjectTM4C123/: ANO_LX_TM4C123.uvguix.35547  ANO_LX_TM4C123.uvguix.Jason  ANO_LX_TM4C123.uvguix.jyoun wong  ANO_LX_TM4C123.uvoptx  ANO_LX_TM4C123.uvprojx  JLinkLog.txt
(+360 files in other folders)
