cmake_minimum_required(VERSION 3.17)

project(Samples)

set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/bin)

#add_subdirectory(ClosestPointViewer)
#add_subdirectory(EventBasedRead)
#add_subdirectory(ExtendedAPI)
add_subdirectory(HardwareD2C)
add_subdirectory(MultiDepthViewer)
add_subdirectory(MultipleStreamRead)
#add_subdirectory(MWClosestPointApp)
#add_subdirectory(NiViewer)
#add_subdirectory(NiViewer_PointCloud)
#add_subdirectory(SimpleRead)
#add_subdirectory(SimpleViewer)
add_subdirectory(SoftD2C)

add_subdirectory(ColorReaderEvent)
add_subdirectory(ColorReaderPoll)
add_subdirectory(ColorReaderUVC)
add_subdirectory(DepthReaderEvent)
add_subdirectory(DepthReaderPoll)
add_subdirectory(GeneratePointCloud)
add_subdirectory(InfraredOniFileReader)
add_subdirectory(InfraredOniFileRecorder)
add_subdirectory(InfraredReaderEvent)
add_subdirectory(InfraredReaderPoll)
